# url-shortener

./: .env.example  .gitignore  Cargo.toml  README.md  justfile  package.json
api/: Cargo.toml  build.rs
api/migrations/2024-04-30-185922_create_links_table/: up.sql
api/proto/: shortener.proto
api/src/: main.rs  schema.rs  server.rs
api/src/db/: mod.rs  models.rs
web/: package.json
web/src/routes/: +page.server.ts  +page.svelte
web/src/routes/[link_id]/: +page.server.ts
