[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
prost = "0.12"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.11"

[build-dependencies]
tonic-build = "0.11"
