[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15.7"
prost = "0.12"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.11"
uuid = "1.8.0"

[build-dependencies]
tonic-build = "0.11"
